cf-vpic.yaml
Description: Create a VPC, Internet Gateway, Subnets, Route Tables and Security Groups
AWSTemplateFormatVersion: '2010-09-09'
#
#  ToDo:
#    Cluster Name
#
# MyIP      68.2.245.108
# Creating a security group that references itself
# https://gist.github.com/alanwill/9254414
#
# Using parameters
# https://curiousorbit.com/blog/cloudformation-using-parameters/
# 
# AWS Parameters
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html
#
# AWS Subnet Configuration
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
#
# AWS Route Table Configuration
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-routetable.html
#
# AWS Routes Configuration
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
Parameters: 
  VpcCidrParameter: 
    Description: "CIDR Block For the VPC"
    Type: String
    Default: "192.168.4.0/24"
  VpcNamePrefix:
    Description: "VPC Name Prefix.  The name will be the prefix plus the region name.  Ex: vpc01-us-west-2"
    Type: String
    Default: "vpc01"
  # See the following function which splits the /24 CIDR range into 6 CIDRs with a subnet mask "/27"
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference-cidr.html
  VpcAzs:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: "Comma-delimited list of three AZs"
    Default: "us-west-2a,us-west-2b,us-west-2c"
  InstanceType:
    Type: String
    Default: m4.large
    Description: Instance type.   (Allowed values are in order by increasing price range).  m4.large is 2vCPU, 8GB priced as $0.1/hr.
    AllowedValues:
    - t2.micro
    - t3a.small
    - t3.small
    - t3a.medium
    - t3.medium
    - t3a.large
    - c5a.large
    - t3.large
    - c5.large
    - c6i.large
    - c5ad.large
    - m5a.large
    - m6a.large
    - t2.large
    - c5d.large
    - m5.large
    - m6i.large
    - c4.large
    - m4.large
    - m5ad.large
    - c5n.large
    - m5d.large
    - r5a.large
    - m5n.large
    - r5.large
    - r6i.large
    - c1.medium
    - r5ad.large
    - m3.large
    - r4.large
    - m5dn.large
    - r5d.large
    - r5b.large
    - r5n.large
    - t3a.xlarge
    - c5a.xlarge
    - i3.large
    - m5zn.large
    - r3.large
    - t3.xlarge
    - r5dn.large
    - c5.xlarge
    - c6i.xlarge
    - c5ad.xlarge
    - c5d.2xlarge
    - c5d.4xlarge
    - c5d.9xlarge
  MyIP:
    Type: String
    Description: "Your IP address.  This will be used in the security group configuration to provide SSH/RDP access to EC2 instances. A CIDR range of /32 will be appended."
    Default: "0.0.0.0"
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})
    ConstraintDescription: must be a valid IP address of the form x.x.x.x.
  KeyPairName: 
    Description: "Key Pair Name (specific to a region) to be used for the EC2 instances.  This keypair must already exist prior to runing this CloudFormation script."
    Type: "AWS::EC2::KeyPair::KeyName"
  CRDBAMIID:
    Description: "CockroachDB AMI ID.  This AMI should have CockroachDB installed along with a CA.  Please see {} for setting up and creating the AMI."
    Type: AWS::EC2::Image::Id
    Default: ami-03af6a70ccd8cb578
  ClusterName:
    Description: "The name for the Cockroach Cluster"
    Type: String
    Default: "My-CRDB-Cluster-01"
  ExistingJoinString:
    Description: "If you are joining the nodes being created here to another region, use the join string created previously (see the Output section of a previously executed stack in another region).  Otherwise, leave this as NONE."
    Type: String
    Default: NONE


Conditions: 
  UseNewJoinString: !Equals [!Ref ExistingJoinString, NONE]

Resources:
  CreateVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref "VpcCidrParameter"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join ['-', [ !Ref 'VpcNamePrefix', !Ref 'AWS::Region']]

  InternetGateway01:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join ['-', [ "ig01", !Ref 'VpcNamePrefix', !Ref 'AWS::Region']]

  VPCGatewayAttachment01:
    DependsOn: 
    - CreateVPC
    - InternetGateway01
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway01
      VpcId: !Ref CreateVPC

  subnet2Public:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [0, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: aza-pub-subnet2
      MapPublicIpOnLaunch: true
  subnet1Private:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [0, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 1, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: aza-pri-subnet1
      MapPublicIpOnLaunch: false
  subnet4Public:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [1, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 2, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: azb-pub-subnet4
      MapPublicIpOnLaunch: True
  subnet3Private:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [1, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 3, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: azb-pri-subnet3
      MapPublicIpOnLaunch: false
  subnet6Public:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [2, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 4, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: azc-pub-subnet6
      MapPublicIpOnLaunch: True
  subnet5Private:
    DependsOn: CreateVPC
    Type: AWS::EC2::Subnet
    Properties:
      # To be clear, the first line sets up the AZ, the second line substitues the AZ (a, b, c, etc) with the reference parameter value
      # AvailabilityZone: !Sub
      #   - "${AWS::Region}${AZ}"
      #   - AZ: !Select [0, !Ref VpcAzs]
      AvailabilityZone: !Select [2, !Ref VpcAzs]
      # AvailabilityZone: "us-west-2a"
      VpcId: !Ref CreateVPC
      # CidrBlock: !Select [0, !Ref SubnetIpBlocks]
      CidrBlock: !Select [ 5, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
      Tags:
      - Key: Name
        Value: azc-pri-subnet5
      MapPublicIpOnLaunch: false

  routeTable01Private:
    DependsOn: CreateVPC
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
      - Key: Name
        Value: rt01-private
      VpcId: !Ref CreateVPC
  routeTable02Public:
    DependsOn: CreateVPC
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
      - Key: Name
        Value: rt02-public
      VpcId: !Ref CreateVPC
  privateSubnetRouteAssociations1:
    DependsOn: 
    - subnet1Private
    - routeTable01Private
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet1Private
      RouteTableId:
        Ref: routeTable01Private
  privateSubnetRouteAssociations2:
    DependsOn:
    - routeTable01Private
    - subnet3Private
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet3Private
      RouteTableId:
        Ref: routeTable01Private
  privateSubnetRouteAssociations3:
    DependsOn:
    - routeTable01Private
    - subnet5Private
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet5Private
      RouteTableId:
        Ref: routeTable01Private
  publicSubnetRouteAssociations1:
    DependsOn:
    - routeTable02Public
    - subnet2Public
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet2Public
      RouteTableId:
        Ref: routeTable02Public
  publicSubnetRouteAssociations2:
    DependsOn:
    - routeTable02Public
    - subnet4Public
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet4Public
      RouteTableId:
        Ref: routeTable02Public
  publicSubnetRouteAssociations3:
    DependsOn:
    - routeTable02Public
    - subnet6Public
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: subnet6Public
      RouteTableId:
        Ref: routeTable02Public

  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: 
    - VPCGatewayAttachment01
    - routeTable02Public
    Properties:
       RouteTableId:
         Ref: routeTable02Public
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: InternetGateway01

  InstanceSecurityGroup01:
    Type: AWS::EC2::SecurityGroup
    DependsOn: CreateVPC
    Properties:
      Tags: 
      - Key: Name
        Value: sg01
      GroupDescription: Allow desktop access (SSH, RDP, Database, HTTP) to EC2 instances
      VpcId:
        Ref: CreateVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Join ['/', [ !Ref 'MyIP', '32']]
        Description: "SSH"
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: !Join ['/', [ !Ref 'MyIP', '32']]
        Description: "RDP"
      - IpProtocol: tcp
        FromPort: 26257
        ToPort: 26257
        CidrIp: !Join ['/', [ !Ref 'MyIP', '32']]
        Description: "CockroachDB"
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: !Join ['/', [ !Ref 'MyIP', '32']]
        Description: "CockroachDB UI"
  InstanceSecurityGroup02:
    Type: AWS::EC2::SecurityGroup
    DependsOn: CreateVPC
    Properties:
      Tags: 
        - Key: Name
          Value: sg02
      GroupDescription: Allow http to client host
      VpcId:
        Ref: CreateVPC
  InstanceSecurityGroup02Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: InstanceSecurityGroup02
    Properties: 
      GroupId: !Ref InstanceSecurityGroup02
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !Ref InstanceSecurityGroup02
      Description: "Intra Node Communication"

  CRDBIPNode01:
    DependsOn: 
    - subnet2Public
    - InstanceSecurityGroup01
    - InstanceSecurityGroup02
    Type: AWS::EC2::NetworkInterface
    Properties:
      PrivateIpAddress: !Join 
      - '.' 
      - - !Select [0, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [1, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [2, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - "4"  
      SubnetId: !Ref subnet2Public
      GroupSet:
      - !Ref InstanceSecurityGroup01
      - !Ref InstanceSecurityGroup02
      Tags:
      - Key: Name
        Value: CRDBIPNode01
  CRDBIPNode02:
    DependsOn: 
    - subnet4Public
    - InstanceSecurityGroup01
    - InstanceSecurityGroup02
    Type: AWS::EC2::NetworkInterface
    Properties:
      PrivateIpAddress: !Join 
      - '.' 
      - - !Select [0, !Split ['.', !Select [0, !Cidr [ !Select [ 2, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [1, !Split ['.', !Select [0, !Cidr [ !Select [ 2, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [2, !Split ['.', !Select [0, !Cidr [ !Select [ 2, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - "68"  
      SubnetId: !Ref subnet4Public
      GroupSet: 
      - !Ref InstanceSecurityGroup01
      - !Ref InstanceSecurityGroup02
      Tags:
      - Key: Name
        Value: CRDBIPNode02  
  CRDBIPNode03:
    DependsOn: 
    - subnet6Public
    - InstanceSecurityGroup01
    - InstanceSecurityGroup02
    Type: AWS::EC2::NetworkInterface
    Properties:
      PrivateIpAddress: !Join 
      - '.' 
      - - !Select [0, !Split ['.', !Select [0, !Cidr [ !Select [ 4, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [1, !Split ['.', !Select [0, !Cidr [ !Select [ 4, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - !Select [2, !Split ['.', !Select [0, !Cidr [ !Select [ 4, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
        - "132"  
      SubnetId: !Ref subnet6Public
      GroupSet:
      - !Ref InstanceSecurityGroup01
      - !Ref InstanceSecurityGroup02
      Tags:
      - Key: Name
        Value: CRDBIPNode03

  CRDBNode01:
    DependsOn: 
    - CRDBIPNode01
    - CRDBIPNode01
    - CRDBIPNode03
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyPairName
      Tags:
      - Key: Name
        Value: CRDB-Node-01
      InstanceType: !Ref InstanceType
      ImageId: !Ref CRDBAMIID
      UserData:
        Fn::Base64:
          !If
            - UseNewJoinString
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${CRDBIPNode01.PrimaryPrivateIpAddress},${CRDBIPNode02.PrimaryPrivateIpAddress},${CRDBIPNode03.PrimaryPrivateIpAddress}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=1" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${ExistingJoinString}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=1" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
      NetworkInterfaces:
      - DeviceIndex: '0'
        NetworkInterfaceId: !Ref CRDBIPNode01
  CRDBNode02:
    DependsOn: 
    - CRDBIPNode01
    - CRDBIPNode02
    - CRDBIPNode03
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyPairName
      Tags:
      - Key: Name
        Value: CRDB-Node-02
      InstanceType: !Ref InstanceType
      ImageId: !Ref CRDBAMIID
      UserData:
        Fn::Base64:
          !If
            - UseNewJoinString
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${CRDBIPNode01.PrimaryPrivateIpAddress},${CRDBIPNode02.PrimaryPrivateIpAddress},${CRDBIPNode03.PrimaryPrivateIpAddress}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=2" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${ExistingJoinString}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=2" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
      NetworkInterfaces:
      - DeviceIndex: '0'
        NetworkInterfaceId: !Ref CRDBIPNode02
  CRDBNode03:
    DependsOn:
    - CRDBIPNode01
    - CRDBIPNode02
    - CRDBIPNode03
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyPairName
      Tags:
      - Key: Name
        Value: CRDB-Node-03
      InstanceType: !Ref InstanceType
      ImageId: !Ref CRDBAMIID
      UserData:
        Fn::Base64:
          !If
            - UseNewJoinString
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${CRDBIPNode01.PrimaryPrivateIpAddress},${CRDBIPNode02.PrimaryPrivateIpAddress},${CRDBIPNode03.PrimaryPrivateIpAddress}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=3" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
            -
              !Sub |
                #!/bin/bash -xe
                echo "export JOIN_STR=${ExistingJoinString}" >> /home/ec2-user/.bashrc
                echo "export COCKROACH_CERTS_DIR=/home/ec2-user/certs" >> /home/ec2-user/.bashrc
                echo "export CRDBNODE=3" >> /home/ec2-user/.bashrc
                echo "STARTCRDB() {" >> /home/ec2-user/.bashrc
                echo "  cockroach start \\" >> /home/ec2-user/.bashrc
                echo '  --locality=region="$aws_region",zone="$aws_az" \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo '  --advertise-addr=$ip_local \' >> /home/ec2-user/.bashrc
                echo '  --join=$JOIN_STR \' >> /home/ec2-user/.bashrc
                echo "  --background " >> /home/ec2-user/.bashrc
                echo " }" >> /home/ec2-user/.bashrc
                echo "CREATENODECERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-node \\" >> /home/ec2-user/.bashrc
                echo '  $ip_local \' >> /home/ec2-user/.bashrc
                echo '  $ip_public \' >> /home/ec2-user/.bashrc
                echo "  localhost \\" >> /home/ec2-user/.bashrc
                echo "  127.0.0.1 \\" >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc
                echo "CREATEROOTCERT() {" >> /home/ec2-user/.bashrc
                echo "  cockroach cert create-client \\" >> /home/ec2-user/.bashrc
                echo '  root \' >> /home/ec2-user/.bashrc
                echo "  --certs-dir=certs \\" >> /home/ec2-user/.bashrc
                echo "  --ca-key=my-safe-directory/ca.key" >> /home/ec2-user/.bashrc
                echo "}" >> /home/ec2-user/.bashrc                
                sleep 2m; su ec2-user -lc 'CREATENODECERT; CREATEROOTCERT; STARTCRDB'
      NetworkInterfaces:
      - DeviceIndex: '0'
        NetworkInterfaceId: !Ref CRDBIPNode03

Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref CreateVPC
    Export:
      Name:  !Sub "${AWS::StackName}-VPCID"
  SubnetPublic1:    
    Description: The ID of the a public subnet
    Value: !Ref subnet2Public
    Export:
      Name:  !Sub "${AWS::StackName}-PublicSubnet1"
  SubnetPublic2:    
    Description: The ID of the a public subnet
    Value: !Ref subnet4Public
    Export:
      Name:  !Sub "${AWS::StackName}-PublicSubnet2"
  SubnetPublic3:    
    Description: The ID of the a public subnet
    Value: !Ref subnet6Public
    Export:
      Name:  !Sub "${AWS::StackName}-PublicSubnet3"
  SecurityGroup1:    
    Description: The ID of the security group 1 (local access to the resources)
    Value: !Ref InstanceSecurityGroup01
    Export:
      Name:  !Sub "${AWS::StackName}-SecurityGroup1"
  SecurityGroup2:    
    Description: The ID of the security group 2 (intranode communication)
    Value: !Ref InstanceSecurityGroup02
    Export:
      Name:  !Sub "${AWS::StackName}-SecurityGroup2"
  JoinValue:
    Description:  The Join value to be copied to additional VPC Creations
    Value: !If [ UseNewJoinString, !Join [",", [ !GetAtt CRDBIPNode01.PrimaryPrivateIpAddress, !GetAtt CRDBIPNode02.PrimaryPrivateIpAddress, !GetAtt CRDBIPNode03.PrimaryPrivateIpAddress ] ], "Use Value From Primary (1st) Region" ]
    Export:
      Name: !Sub "${AWS::StackName}-JoinValue"
  PublicSubnet01WouldBe:
    Description:  This is what the Private IP Would be
    # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
    Value: !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]]
  PrivateIP01WouldBe:
    Description:  This is what the Private IP Would be
    # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
    Value: !Select [0, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
  PrivateIP02WouldBe:
    Description:  This is what the Private IP Would be
    # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
    Value: !Select [1, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
  PrivateIP03WouldBe:
    Description:  This is what the Private IP Would be
    # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
    Value: !Select [2, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
  PrivateIPCombined:
    Value: !Join 
    - '.' 
    - - !Select [0, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
      - !Select [1, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
      - !Select [2, !Split ['.', !Select [0, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 1] ] ] ]
  # PrivateIP02WouldBe:
  #   Description:  This is what the Private IP Would be
  #   # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
  #   Value: !Select [1, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 0] ]
  # PrivateIP03WouldBe:
  #   Description:  This is what the Private IP Would be
  #   # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
  #   Value: !Select [2, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 0] ]
  # PrivateIP04WouldBe:
  #   Description:  This is what the Private IP Would be
  #   # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
  #   Value: !Select [3, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 0] ]
  # PrivateIP16WouldBe:
  #   Description:  This is what the Private IP Would be
  #   # Get the CIDR range of the 1st public subnet, then generate 16 CIDRs (for the whole range) with a /32 and select the 4th IP address
  #   Value: !Select [15, !Cidr [ !Select [ 0, !Cidr [ !Ref VpcCidrParameter, 6, 5 ]], 16, 0] ]
